[gd_scene load_steps=5 format=3 uid="uid://do78dko0vly72"]

[ext_resource type="Script" uid="uid://22r1onxsoed8" path="res://src/ui/battle_ui/button/battle_button.gd" id="1_ygwun"]
[ext_resource type="Texture2D" uid="uid://dx03kxesagkcb" path="res://asset/ui/battle_ui/button/label_button_idle.png" id="2_xksmx"]
[ext_resource type="Texture2D" uid="uid://dj8k7svwmeu1x" path="res://asset/ui/battle_ui/button/label_button_hover.png" id="3_xksmx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdkmb"]
size = Vector2(79, 14)

[node name="BattleButton" type="Area2D"]
script = ExtResource("1_ygwun")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(39.5, 7)
shape = SubResource("RectangleShape2D_fdkmb")

[node name="idle_spr" type="Sprite2D" parent="."]
texture = ExtResource("2_xksmx")
centered = false

[node name="hover_spr" type="Sprite2D" parent="."]
texture = ExtResource("3_xksmx")
centered = false
